# yt-watcher

./: Dockerfile  README.md  config.json  driver.py  main.py  test.py  yt-viewer.py
docker-builds/: docker-compose.yml
image-server-REST/: .gitignore  Dockerfile  README.md  index.js  package-lock.json  package.json
image-server-REST/frontend/: index.html  login.html  signup.html  starter-page.html
image-server-REST/frontend/assets/css/: login.css  main.css
image-server-REST/frontend/assets/js/: image.js  login.js  main.js  signup.js
image-server-REST/users/: image.controller.js  image.services.js  user.controller.js  user.services.js
image-server-REST/utils/: jwt.js
src/task/: watcher.py
src/util/: base.py  webdriverManager.py
valorant/: pyproject.toml  test.py  trick.py
valorant/lotus/: __init__.py  demo.py  main.py
yt-watcher/: requirements.txt
